--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -25,4 +25,6 @@ jobs:
           BSKY_HANDLE: devilmaycry5.bsky.social
           BSKY_APP_PASSWORD: ${{ secrets.BSKY_APP_PASSWORD }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        run: node index.js
+        run: |
+          set -x
+          node index.js
