--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20.0.0'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run bot
         env:
