--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: '20.0.0'
 
+      - name: Debug npm
+        run: npm config set loglevel verbose
+
       - name: Install dependencies
         run: npm ci
 
