--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20.0.0'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --verbose
 
       - name: Upload npm debug log
         if: failure()
