--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bluesky-discord-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@atproto/api": "^0.5.0",
     "axios": "^1.6.0",
