--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "bluesky-discord-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "type": "module",
   "dependencies": {
-    "@atproto/api": "^0.5.0",
-    "axios": "^1.6.0",
-    "dotenv": "^16.0.3"
+    "@atproto/api": "^0.12.0",
+    "axios": "^1.6.0"
   }
 }
