--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bluesky-discord-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "@atproto/api": "^0.12.0",
     "axios": "^1.6.0"
