--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "@atproto/api": "^0.12.0",
-    "axios": "^1.6.0"
+  "@atproto/api": "^0.12.0",
+  "axios": "^1.6.0",
+  "dotenv": "^16.4.5"
   }
 }
