--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -26,3 +26,10 @@ jobs:
           BSKY_APP_PASSWORD: ${{ secrets.BSKY_APP_PASSWORD }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: node index.js
+      - name: Commit updated last_sent.json
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add last_sent.json
+          git commit -m "update sent URIs [skip ci]" || echo "No changes to commit"
+          git push
