--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Commit updated last_sent.json
         run: |
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add last_sent.json
           git commit -m "update sent URIs [skip ci]" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
