--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run bot
         env:
-          BSKY_HANDLE: devilmaycry5.bsky.social
+          BSKY_HANDLE: ${{ secrets.BSKY_HANDLE }}
           BSKY_APP_PASSWORD: ${{ secrets.BSKY_APP_PASSWORD }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: node index.js
